tests/test_exception/bad/missing_unlabeled_definition.catala_en
## Test

```catala
declaration scope A:
  context x content integer

scope A:
  exception
  definition x equals 1
```

```catala-test-inline
$ catala Interpret -s A
[ERROR]
This exception does not have a corresponding definition

┌─⯈ tests/test_exception/bad/missing_unlabeled_definition.catala_en:8.3-9.15:
└─┐
8 │   exception
  │   ‾‾‾‾‾‾‾‾‾
9 │   definition x equals 1
  │   ‾‾‾‾‾‾‾‾‾‾‾‾
  └─ Test
#return code 123#
```
